test/functions/default-arguments/default-argument-type-not.good
default-argument-type-not.chpl:1: error: unable to initialize a type formal with a value
