test/functions/default-arguments/default-argument-type-not.future
error message: type argument can have a value default
#7955
